base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: heimdal
  namespace: heimdal
  labels:
    app: heimdal
spec:
  ports:
    - name: http-80
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: heimdal
  type: ClusterIP
