base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heimdal
  namespace: heimdal
spec:
  rules:
    - host: heimdal.127.0.0.1.nip.io
      http:
        paths:
          - backend:
              service:
                name: heimdal
                port:
                  number: 80
            pathType: ImplementationSpecific
            path: ''
